# flake8-copyright-validator

./: .gitignore  LICENSE  README.md  error_messages.py  flake8_copyright_validator.py  setup.cfg  setup.py
