[metadata]
name = flake8_copyright_validator
version = 0.0.2

[options]
py_modules = flake8_copyright_validator

[options.entry_points]
flake8.extension =
    NCF=flake8_copyright_validator:CopyrightValidator

[flake8]
show-source = True
max-line-length = 120
exclude =
    .git
    __pycache__
    venv
    .venv

[isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 120